# shellDrop

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
include/: shell.h
src/: shell.cpp  shellDrop.cpp
utils/: packer.bat  set_metasploit_handler.py
